--- a/src/index.html
+++ b/src/index.html
@@ -33,8 +33,8 @@
 <div class="container">
     <div class="content hide">
         <div class="search">
-            <form class="form" action="#" autocomplete="on">
-                <input type="text" class="input" name="search_text" placeholder="百度一下，你就知道" autocomplete="on"/>
+            <form class="form" action="#" autocomplete="off">
+                <input type="text" class="input" id="search_text" name="search_text" placeholder="百度一下，你就知道" autocomplete="off"/>
                 <button class="submit" type="button">
                     <img class="icon" src="/images/search.png" alt="search icon">
                 </button>
@@ -141,19 +141,11 @@
         <a href="#">Copyright 2023-9999</a>
         <a href="https://www.gowas.cn/">极简超级导航</a>
         <a href="https://github.com/putyy/nav">github</a>
+        <a href="https://putyy.com/">putyy</a>
     </div>
 </div>
 <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 <script type="module" src="./assets/main.js"></script>
-<script>
-    var _hmt = _hmt || [];
-    (function() {
-        var hm = document.createElement("script");
-        hm.src = "https://hm.baidu.com/hm.js?b8a04346f804599a6bf8bb91a8b31561";
-        var s = document.getElementsByTagName("script")[0];
-        s.parentNode.insertBefore(hm, s);
-    })();
-</script>
 <script>
     
 </script>
