--- a/src/index-cp.html
+++ b/src/index-cp.html
@@ -103,8 +103,9 @@
     </div>
 </div>
 <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-<script type="module" src="./assets/main.js"></script>
+<script type="module" src="./assets/main.js?version=__version__"></script>
 <script>
+    window.gowas_version = '__version__';
     __script__
 </script>
 </body>
