--- a/src/index.html
+++ b/src/index.html
@@ -72,7 +72,7 @@
 <!--                    <li class="item">-->
 <!--                        工具-->
 <!--                    </li>-->
-                   <li class="item active" data-index="0">常用</li><li class="item " data-index="1">日常</li><li class="item " data-index="2">工具</li><li class="item " data-index="3">娱乐</li><li class="item " data-index="4">生活</li><li class="item " data-index="5">学习</li><li class="item " data-index="6">工作</li><li class="item " data-index="7">趣味</li><li class="item " data-index="8">开发</li><li class="item " data-index="9">设计</li><li class="item " data-index="10">效率</li><li class="item " data-index="11">其他</li>
+                   <li class="item active" data-index="0">常用</li><li class="item " data-index="1">日常</li><li class="item " data-index="2">开发</li><li class="item " data-index="3">设计</li><li class="item " data-index="4">工具</li><li class="item " data-index="5">娱乐</li><li class="item " data-index="6">生活</li><li class="item " data-index="7">学习</li><li class="item " data-index="8">工作</li><li class="item " data-index="9">趣味</li><li class="item " data-index="10">效率</li><li class="item " data-index="11">其他</li>
                 </ul>
             </div>
             <div class="two">
@@ -145,8 +145,9 @@
     </div>
 </div>
 <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-<script type="module" src="./assets/main.js"></script>
+<script type="module" src="./assets/main.js?version=1.0.1"></script>
 <script>
+    window.gowas_version = '1.0.1';
     
 </script>
 </body>
